# motorcontrol

./: .clang-format  .cproject  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  STM32F446RETX_FLASH.ld  build-install-gcc-eabi.sh  debug.cfg  motorcontrol.ioc
Core/Inc/: register.h
Core/Src/: can.c  main.c  register.c  stm32f4xx_it.c
cmake/modules/: Findcmock.cmake  Findgtest.cmake  Findlcov.cmake  Findnnvg.cmake  Findunity.cmake
cmake/testing/: cmock.cmake  unity.cmake
dsdl/: public_regulated_data_types
dsdl/mattfair/storage/: Register.1.0.dsdl
src/: .cproject  .mxproject  .project  STM32F446RETX_RAM.ld  motorcontrol.ioc
src/Core/Inc/: adc.h  can.h  fsm.h  gpio.h  main.h  o1heap.h  spi.h  stm32f4xx_it.h  structs.h  tim.h
src/Core/Src/: calibration.c  can.c  fsm.c  gpio.c  hal_flash.c  main.c  native_flash.c  stm32f4xx_it.c  usart.c
src/IO/: canringbuffer.c  canringbuffer.h  flash.c  flash.h  hal.h  hal_flash.c  register.c  register.h
tests/: .clangd  GTestOutput.h  main.cpp
tests/IO/: flash_test.c  flash_test.cpp  register_test.c  register_test.cpp
tests/mocks/: hal_test.c
tests/mocks/IO/: mock_flash.cpp  mock_hal_flash.cpp
tests/mocks/configs/: stm32f4xx_cmock_config.yml
